crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_atrule_decls.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "PageRule",
      "at_keyword": {
        "kind": "AtKeyword",
        "offset": 0,
        "len": 5
      },
      "selectors": [
        [
          {
            "type": "PageSelector",
            "page_type": null,
            "pseudos": [
              {
                "left": [
                  {
                    "kind": "Colon",
                    "len": 1
                  },
                  {
                    "kind": "Ident",
                    "offset": 7,
                    "len": 4
                  }
                ]
              }
            ]
          },
          null
        ]
      ],
      "block": {
        "type": "PageBlock",
        "open": {
          "kind": "LeftCurly",
          "len": 1
        },
        "properties": [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 18,
              "len": 10
            },
            "colon": {
              "kind": "Colon",
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "len": 1
                },
                {
                  "kind": "Ident",
                  "offset": 30,
                  "len": 5
                }
              ]
            },
            "important": null,
            "semicolon": null
          }
        ],
        "rules": [],
        "close": {
          "kind": "RightCurly",
          "len": 1
        }
      }
    }
  ]
}
