crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_atrule_empty.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "node": {
    "type": "stylesheet",
    "rules": [
      {
        "node": {
          "type": "Utf8"
        },
        "start": 0,
        "end": 17
      }
    ]
  },
  "start": 0,
  "end": 17
}
