crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_atrule_no_params.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "PageRule",
      "at_keyword": {
        "kind": "AtKeyword",
        "offset": 0,
        "len": 5
      },
      "selectors": null,
      "block": {
        "type": "PageBlock",
        "open": {
          "kind": "LeftCurly",
          "len": 1
        },
        "properties": [],
        "rules": [],
        "close": {
          "kind": "RightCurly",
          "len": 1
        }
      }
    }
  ]
}
