crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_atrule_no_semicolon.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "at_keyword": {
        "kind": "AtKeyword",
        "offset": 26,
        "len": 8
      },
      "space": {
        "kind": "Whitespace",
        "offset": 34,
        "len": 1
      },
      "string": {
        "kind": "String",
        "offset": 35,
        "len": 7
      },
      "semicolon": null
    }
  ]
}
