crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_atrule_params.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "MozDocument",
      "at_keyword": {
        "kind": "AtKeyword",
        "offset": 0,
        "len": 14
      },
      "matchers": [
        [
          {
            "UrlFunction": [
              {
                "kind": "Function",
                "offset": 38,
                "len": 4
              },
              {
                "kind": "String",
                "offset": 42,
                "len": 15
              },
              {
                "kind": "RightParen",
                "len": 1
              }
            ]
          },
          null
        ]
      ],
      "block": {
        "type": "DocumentBlock",
        "open": {
          "kind": "LeftCurly",
          "len": 1
        },
        "rules": [],
        "close": {
          "kind": "RightCurly",
          "len": 1
        }
      }
    }
  ]
}
