crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_decls.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "node": {
    "type": "stylesheet",
    "rules": [
      {
        "node": {
          "type": "stylerule",
          "selectors": {
            "node": [
              {
                "node": [
                  {
                    "type": "tag",
                    "value": {
                      "Html": "A"
                    }
                  }
                ],
                "start": 0,
                "end": 2
              }
            ],
            "start": 0,
            "end": 2
          },
          "node": {
            "type": "style-declaration",
            "declarations": [
              {
                "node": {
                  "type": "property",
                  "name": "color",
                  "value": {
                    "Named": {
                      "type": "black"
                    }
                  },
                  "important": false
                },
                "start": 3,
                "end": 21
              },
              {
                "node": {
                  "type": "property",
                  "name": "background",
                  "value": [
                    {
                      "node": {
                        "kind": "Ident",
                        "value": "white"
                      },
                      "start": 38,
                      "end": 43
                    }
                  ],
                  "important": false
                },
                "start": 21,
                "end": 44
              }
            ],
            "rules": []
          },
          "start": 2,
          "end": 46
        },
        "start": 0,
        "end": 46
      }
    ]
  },
  "start": 0,
  "end": 46
}
