crates/hdx_ast/tests/snapshots/postcss_snapshots__postcss_empty.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "node": {
    "type": "stylesheet",
    "rules": []
  },
  "start": 0,
  "end": 0
}
